# whirl-frontend

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  TODO.md
examples/: main.cpp  (+1 more)
whirl/: CMakeLists.txt  jiffies.hpp  time.hpp
whirl/cereal/: bytes.hpp  empty_message.hpp  macro.hpp  serializable.hpp  serialize.hpp  tuple.hpp  unit.hpp
whirl/cluster/: peer.cpp  peer.hpp
whirl/db/: database.hpp  kv.hpp  mutation.hpp  write_batch.hpp
whirl/db/store/: kv.hpp  struct.hpp
whirl/db/typed/: kv_storage.hpp  storage.hpp
whirl/engines/: README.md  reflect.cpp  reflect.hpp
whirl/fs/: error.hpp  fs.hpp  io.cpp  io.hpp  path.hpp
whirl/helpers/: bytes.hpp  copy.hpp  digest.hpp  errors.hpp  id.hpp  priority_queue.hpp  serialize.hpp  string_utils.cpp  string_utils.hpp  tuple.hpp  weak_ptr.hpp
whirl/history/: history.hpp
whirl/history/checker/: brute.hpp  check.hpp  real_time_order.hpp
whirl/history/models/: kv.hpp
whirl/history/printers/: kv.hpp  print.hpp
whirl/io/: framed.cpp  framed.hpp  reader.cpp  reader.hpp  writer.cpp  writer.hpp
whirl/logger/: backend.cpp  backend.hpp  enabled.hpp  level.cpp  level.hpp  log.cpp  log.hpp
whirl/matrix/: actor.hpp  actor_ctx.hpp  adversary.hpp  allocator.cpp  allocator.hpp  clock.hpp  cluster.hpp  config.hpp  event_queue.hpp  global.cpp  global.hpp  heap.cpp  heap.hpp  link.hpp  local_clocks.hpp  local_storage.hpp  log.cpp  log.hpp  message.hpp  message_bus.hpp  network.cpp  network.hpp  process_base.hpp  process_heap.hpp  process_network.cpp  process_network.hpp  random.hpp  random_source.hpp  rpc.hpp  runtime.hpp  server.cpp  server.hpp  time_service.hpp  true_time.hpp  uid.hpp  world.cpp  world.hpp  world_view.hpp
whirl/matrix/adversary/: adversary.hpp  adversary_base.cpp  adversary_base.hpp  process.hpp  strategy.hpp
whirl/matrix/channels/: history.cpp  history.hpp  logging.cpp  logging.hpp  random.cpp  random.hpp  retries.cpp  retries.hpp
whirl/matrix/client/: client.cpp  client.hpp  random_channel.cpp  random_channel.hpp
whirl/matrix/common/: allocator.cpp  allocator.hpp  copy.hpp  event_queue.hpp  heap.cpp  heap.hpp
whirl/matrix/fault/: accessors.cpp  accessors.hpp  network.hpp  server.hpp  thread.hpp
whirl/matrix/history/: all.hpp  history.hpp  model.hpp  record_call.hpp  recorder.cpp  recorder.hpp
whirl/matrix/log/: env.cpp  env.hpp  event.hpp  file.cpp  file.hpp  level.cpp  level.hpp  log.cpp  log.hpp  logger.cpp  logger.hpp  writer.hpp
whirl/matrix/memory/: allocator.cpp  allocator.hpp  copy.hpp  heap.cpp  heap.hpp  helpers.hpp  hide_to_heap.hpp  new.cpp  new.hpp
whirl/matrix/network/: address.cpp  address.hpp  connection.hpp  endpoint_id.hpp  link.cpp  link.hpp  link_layer.cpp  link_layer.hpp  link_network.cpp  link_network.hpp  message.hpp  network.cpp  network.hpp  packet.hpp  server.hpp  socket.cpp  socket.hpp  timestamp.cpp  timestamp.hpp  transport.cpp  transport.hpp
whirl/matrix/process/: crash.cpp  crash.hpp  heap.hpp  network.cpp  network.hpp  process_base.hpp  step_queue.hpp
whirl/matrix/server/: clocks.hpp  config.hpp  server.cpp  server.hpp  storage.cpp  storage.hpp
whirl/matrix/test/: main.cpp  random.hpp  reporter.hpp
whirl/matrix/world/: actor.hpp  actor_ctx.hpp  behaviour.cpp  behaviour.hpp  clock.hpp  cluster.hpp  dice.hpp  faults.cpp  faults.hpp  global.cpp  global.hpp  impl.cpp  impl.hpp  random.cpp  random_source.hpp  time.hpp  world.cpp  world.hpp  world_impl.cpp  world_impl.hpp  world_view.hpp
whirl/node/: config.hpp  id.hpp  local_storage.hpp  logging.hpp  node.hpp  node_base.cpp  node_base.hpp  node_methods_base.hpp  peer_base.cpp  peer_base.hpp  runtime.cpp  runtime.hpp  runtime_methods_base.hpp  services.hpp  this.cpp  this.hpp  this_node.hpp  threads.hpp
whirl/node/cluster/: discovery.hpp  list.hpp  peer.cpp  peer.hpp
whirl/node/config/: config.hpp
whirl/node/db/: database.hpp  iterator.hpp  kv.hpp  mutation.hpp  snapshot.hpp  write_batch.hpp
whirl/node/fs/: fs.hpp  io.cpp  io.hpp  path.cpp  path.hpp
whirl/node/guid/: guid.hpp
whirl/node/guids/: service.hpp
whirl/node/misc/: config.hpp  terminal.hpp
whirl/node/net/: transport.hpp
whirl/node/program/: main.cpp  main.hpp  prologue.cpp  prologue.hpp  util.cpp  util.hpp
whirl/node/random/: service.hpp
whirl/node/rpc/: call.cpp  call.hpp  channel.hpp  client.cpp  client.hpp  errors.cpp  errors.hpp  id.cpp  input.hpp  invoke_helper.hpp  method.cpp  method.hpp  protocol.hpp  random.cpp  random.hpp  retries.cpp  retries.hpp  round_robin.cpp  round_robin.hpp  server.cpp  server.hpp  server_impl.cpp  server_impl.hpp  service.hpp  service_base.hpp  trace.cpp  trace.hpp  transport_channel.cpp  transport_channel.hpp
whirl/node/runtime/: methods.cpp  methods.hpp  shortcuts.cpp  shortcuts.hpp
whirl/peer/: peer.cpp  peer.hpp
whirl/program/: main.cpp  main.hpp  program.hpp
whirl/rpc/: call.cpp  call.hpp  channel.hpp  client.cpp  client.hpp  context.cpp  context.hpp  errors.cpp  errors.hpp  exceptions.hpp  id.cpp  input.hpp  invoke_helper.hpp  method.cpp  net_transport.hpp  protocol.hpp  random.cpp  random.hpp  request_context.cpp  request_context.hpp  retries.cpp  retries.hpp  round_robin.cpp  round_robin.hpp  server.hpp  server_impl.cpp  server_impl.hpp  service.hpp  service_base.hpp  trace.cpp  trace.hpp  transport_channel.cpp  transport_channel.hpp  typed_channel.hpp
whirl/runtime/: access.cpp  access.hpp  methods.cpp  methods.hpp  runtime.cpp  runtime.hpp
whirl/services/: config.hpp  database.hpp  discovery.hpp  executor.hpp  fault.hpp  filesystem.hpp  guid.hpp  local_storage.hpp  local_storage_backend.hpp  local_storage_impl.hpp  logger.hpp  message_bus.hpp  net_transport.hpp  node.hpp  node_base.hpp  node_services.hpp  random.hpp  rpc.hpp  rpc_impl.hpp  threads.hpp  time.hpp  time_service.hpp  true_time.hpp  uid.hpp
whirl/store/: kv.hpp  struct.hpp
whirl/time/: time.hpp
(+281 files in other folders)
